/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/5.4.1/userguide/tutorial_java_projects.html
 */

plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building an application
    id 'application'

    id 'org.openjfx.javafxplugin' version '0.0.7'
}

sourceCompatibility = 11
targetCompatibility = 11

version = '0.0.1'
group = 'ehu.isad'

java{
    modularity.inferModulePath.set(true)
}

application{
    mainModule = 'oinarria' //name defined in module-info.java
    mainClass = 'ehu.isad.Main'
}

javafx {

    //modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.web','javafx.graphics']
    modules = []
    version = "12" //'11.0.2'
}

repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.8.6'
    // Use JUnit test framework
    testImplementation 'junit:junit:4.12'

}


// Define the main class for the application
mainClassName = "$moduleName/ehu.isad.Main"


def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',]

run {
    inputs.property('moduleName', moduleName)
    doFirst {
        jvmArgs = jvmArgs.plus(newArgs)
        jvmArgs = jvmArgs.plus(['--module-path', classpath.asPath,
                                '--patch-module', "$moduleName=" + files(sourceSets.main.output.resourcesDir).asPath,
                                '--module', "$mainClassName",
        ])
        classpath = files()
    }
}

